new functionalInterface class is added